--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   "license": "MIT",
   "devDependencies": {
     "htmlhint": "^0.11.0"
+  },
+  "scripts": {
+    "sass": "node-sass -w ./sass_sandbox/scss/ -o ./sass_sandbox/dist/css --recursive"
+  },
+  "dependencies": {
+    "node-sass": "^4.12.0"
   }
 }
